--- a/requirements.txt
+++ b/requirements.txt
@@ -7,36 +7,22 @@ aiohttp=3.9.5=pypi_0
 aiosignal=1.3.1=pypi_0
 annotated-types=0.7.0=pypi_0
 anyio=4.4.0=pypi_0
-archspec=0.2.3=pyhd3eb1b0_0
 attrs=23.2.0=pypi_0
-boltons=23.0.0=py312h06a4308_0
-brotli-python=1.0.9=py312h6a678d5_8
 bzip2=1.0.8=h5eee18b_6
-c-ares=1.19.1=h5eee18b_0
 ca-certificates=2024.3.11=h06a4308_0
-certifi=2024.2.2=py312h06a4308_0
-cffi=1.16.0=py312h5eee18b_1
-charset-normalizer=2.0.4=pyhd3eb1b0_0
-conda=24.5.0=py312h06a4308_0
-conda-libmamba-solver=24.1.0=pyhd3eb1b0_0
-conda-package-handling=2.2.0=py312h06a4308_1
-conda-package-streaming=0.9.0=py312h06a4308_0
-cryptography=41.0.4=pypi_0
+certifi=2024.6.2=pypi_0
+charset-normalizer=3.3.2=pypi_0
 dataclasses-json=0.6.6=pypi_0
-distro=1.9.0=py312h06a4308_0
+distro=1.9.0=pypi_0
 expat=2.6.2=h6a678d5_0
-fmt=9.1.0=hdb19cb5_1
-frozendict=2.4.2=py312h06a4308_0
 frozenlist=1.4.1=pypi_0
 greenlet=3.0.3=pypi_0
 h11=0.14.0=pypi_0
 httpcore=1.0.5=pypi_0
 httpx=0.27.0=pypi_0
-icu=73.1=h6a678d5_0
-idna=3.7=py312h06a4308_0
-jsonpatch=1.33=py312h06a4308_1
-jsonpointer=2.1=pyhd3eb1b0_0
-krb5=1.20.1=h143b758_1
+idna=3.7=pypi_0
+jsonpatch=1.33=pypi_0
+jsonpointer=2.4=pypi_0
 langchain=0.2.3=pypi_0
 langchain-community=0.2.4=pypi_0
 langchain-core=0.2.5=pypi_0
@@ -46,24 +32,13 @@ langchain-text-splitters=0.2.1=pypi_0
 langgraph=0.0.65=pypi_0
 langsmith=0.1.75=pypi_0
 ld_impl_linux-64=2.38=h1181459_1
-libarchive=3.6.2=h6ac8c49_3
-libcurl=8.7.1=h251f7ec_0
-libedit=3.1.20230828=h5eee18b_0
-libev=4.33=h7f8727e_1
 libffi=3.4.4=h6a678d5_1
 libgcc-ng=11.2.0=h1234567_1
 libgomp=11.2.0=h1234567_1
-libmamba=1.5.8=hfe524e5_2
-libmambapy=1.5.8=py312h2dafd23_2
-libnghttp2=1.57.0=h2d74bed_0
-libsolv=0.7.24=he621ea3_1
-libssh2=1.11.0=h251f7ec_0
 libstdcxx-ng=11.2.0=h1234567_1
 libuuid=1.41.5=h5eee18b_0
-libxml2=2.10.4=hfdd30dd_2
-lz4-c=1.9.4=h6a678d5_1
+loguru=0.7.2=pypi_0
 marshmallow=3.21.3=pypi_0
-menuinst=2.0.2=py312h06a4308_1
 multidict=6.0.5=pypi_0
 mypy-extensions=1.0.0=pypi_0
 ncurses=6.4=h6a678d5_0
@@ -71,26 +46,15 @@ numpy=1.26.4=pypi_0
 openai=1.33.0=pypi_0
 openssl=3.0.13=h7f8727e_2
 orjson=3.10.3=pypi_0
-packaging=23.2=py312h06a4308_0
-pcre2=10.42=hebb0a14_1
+packaging=23.2=pypi_0
 pip=24.0=py312h06a4308_0
-platformdirs=3.10.0=py312h06a4308_0
-pluggy=1.0.0=py312h06a4308_1
-pybind11-abi=5=hd3eb1b0_0
-pycosat=0.6.6=py312h5eee18b_1
-pycparser=2.21=pyhd3eb1b0_0
 pydantic=2.7.3=pypi_0
 pydantic-core=2.18.4=pypi_0
-pyopenssl=24.0.0=py312h06a4308_0
-pysocks=1.7.1=py312h06a4308_0
 python=3.12.3=h996f2a0_1
 pyyaml=6.0.1=pypi_0
 readline=8.2=h5eee18b_0
 regex=2024.5.15=pypi_0
-reproc=14.2.4=h6a678d5_2
-reproc-cpp=14.2.4=h6a678d5_2
-requests=2.31.0=py312h06a4308_1
-ruamel.yaml=0.17.21=py312h5eee18b_0
+requests=2.32.3=pypi_0
 setuptools=69.5.1=py312h06a4308_0
 sniffio=1.3.1=pypi_0
 sqlalchemy=2.0.30=pypi_0
@@ -98,16 +62,12 @@ sqlite=3.45.3=h5eee18b_0
 tenacity=8.3.0=pypi_0
 tiktoken=0.7.0=pypi_0
 tk=8.6.14=h39e8969_0
-tqdm=4.66.2=py312he106c6f_0
-truststore=0.8.0=py312h06a4308_0
+tqdm=4.66.4=pypi_0
 typing-extensions=4.12.2=pypi_0
 typing-inspect=0.9.0=pypi_0
 tzdata=2024a=h04d1e81_0
-urllib3=1.26.18=py312h06a4308_0
+urllib3=2.2.1=pypi_0
 wheel=0.43.0=py312h06a4308_0
 xz=5.4.6=h5eee18b_1
-yaml-cpp=0.8.0=h6a678d5_1
 yarl=1.9.4=pypi_0
 zlib=1.2.13=h5eee18b_1
-zstandard=0.22.0=py312h2c38b39_0
-zstd=1.5.5=hc292b87_2
